Fixed error message alignment issue on view qualificaiton

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewQualificationsSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewQualificationsSuccess.css
@@ -26,7 +26,7 @@ h3 {
 }
 
 div.error{
-    margin-left: 140px;
+    margin-left: 160px;
     margin-top: 2px;
 }
 
